first mvaen project commit

--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
   </dependencies>
   <build>
     <finalName>finance</finalName>
+	<sourceDirectory>src/main/java</sourceDirectory>
   </build>
 </project>
